--- a/Public/Assets/CSS/Receptionist/main.css
+++ b/Public/Assets/CSS/Receptionist/main.css
@@ -1,66 +1,283 @@
 @import url('../variables.css');
 
-.header {
-    position: fixed;
-    right: 0;
-    top: 0;
-    background: linear-gradient(135deg, var(--primary-color), var(--primary-hover));
-    color: #fff;
-    padding: 1.4%;
-    display: flex;
-    justify-content: space-between;
+body{
+    display :flex;
+    justify-content: center;
     align-items: center;
-    max-height: 6%;
+    height:100vh;
+    width:100vw;
+    font-family: Roboto,sans-serif;
+    margin:0px;
+    padding:0px;
+}
+
+
+.main{
+    display:flex;
+    height:100%;
+    width:100%;
+    border: 1px solid black;
+    box-sizing:border-box;
+    margin:0;
+}
+
+.side_bar{
+    flex:4;
+    height:100%;
+    background-color:#fff;
+    flex-direction: column ;
+    justify-content:flex-start;
+  
+    align-items:center;
+}
+.userblock{
+    height:12%;
+    display:flex;
+    flex-direction: row;
+    align-items:center;
+    justify-content:center;
+    margin:0px 34px;
+    
+}
+.photo{
+    flex:1;
+}
+.photo img{
+    margin-top:15px;
+    border-radius:100%;
+   
+}
+.username {
+    flex:3;
+    margin-top: 15px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin:0px;
+    padding:0px;
+    
+}
+
+.username h3{
+   
+margin-bottom: 0px;
+    padding:0px;
+}
+.username P{
+    margin-top: 0px;
+    padding:0px;
+}
+.directions{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 10px;
+    align-items: center;
+}
+.direction-items{
+    display:flex;
+    flex-direction: column;
+    width:100%;
+    justify-content: space-around;
+}
+.directions hr{
+    width:80%;
+    margin:20px 12px;
+    margin-left: 5px;
+    height: 1px;
+    background-color: #000;
+}
+
+.leaves{
+    margin-bottom: 30px;;
+}
+.help{
+    margin-top: 30px;
+}
+
+.direction-items hr{
+    margin-left: 25px;
+}
+
+.content{
+    flex:19;
+    display:flex;
+    flex-direction: column;
+    height: 100%; ;
+}
+.header{
+ 
+    height:10%;
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    background:linear-gradient(135deg,#60a6ec,#10639e);
+    align-items: center;
+}
+.header-title{
+    margin-right: auto;
+    padding:30px  20px;
+    color:#fff;
+}
+.header-title h2,
+.header-title p{
+    margin:0;
+    padding:0px;
+}
+:root{
+    --primary-color:#3974BA;
+    --secondary-color:#2353A7;
+    --light-color:#B3B3B3 ;  /*opacity 36%*/  
+    --font-color-black:#333333;
+    --background-white:#E3E3E3; /*opacity 65%*/
+    --light-black:#2b2b2b;
+    --background-opacity:rgba(204,204,204,0.36);
+    --background-hover:rgba(204,204,204,0.56)
+}
+
+:root {
+    --font-size-body: 16px;
+    --font-size-mainHeading: 28px;
+    --font-size-subHEading: 18px;
+  }
+.field_input{
+    
+    
+    display:flex;
+    margin:20px;
+    align-items: center;
+}
+.field_input input{
+    width:270px;
+    height:40px;
+    border-radius: 0px 20px 20px 0px;
+    background-color: var(--background-opacity);
+    border:none;
+    outline:none;
+    padding:0px;
+    
+}
+.field_input input::placeholder{
+    color:#fff;
+    font-size: 15px;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+.field_input i{
+    width:50px;
+    height: 40px;
+    color:#fff;
+    background-color: var(--background-opacity);
+    font-size: 16px;
+    border:none;
+    outline:none;
+    border-radius: 20px 0px 0px 20px;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.subscription{
+    margin:20px;
+    border-radius: 50%;
+    background-color:var(--background-opacity) ;
+    height:40px;
+    width:40px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.photo2 img{
+    margin:20px;
+    border-radius:100%;
+}
+.detailed_content{
+    height:90%;
+    width:100%;
+    background:linear-gradient(to bottom right,#f7f7f7,#eaeaea);
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+}
+a{
+    text-decoration: none;
+    color:#000;
+}
+
+.side_bar ul li {
+    margin-bottom: -1.875rem;
+    position: relative;
+}
+
+.side_bar ul li a {
+    text-decoration: none;
+    color: #333;
+    font-size: 1.125rem;
+    display: flex;
+    align-items: center;
+    margin-top: 2.5rem;
+    padding: 0.625rem;
+    transition: color 0.5s, border-color 0.3s;
+}
+
+.side_bar ul li a i {
+    margin-right: 0.625rem;
+    margin-top: 0.125rem;
+}
+
+.side_bar.minimized ul li a span {
+    display: none;
+}
+
+.side_bar.minimized a span {
+    display: none;
+}
+
+.side_bar ul li a:hover {
+    color: var(--button-blue);
+}
+
+.side_bar ul li a::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 0.125rem;
     width: 100%;
-    z-index: 10;
+    background-color: var(--button-blue);
+    transform: scaleX(0);
+    transition: transform 0.3s;
 }
-.header .fa-bars {
-    margin-left: 20%;
-    transition: transform 0.3s ease;
-    cursor: pointer; 
-    right: 0;
-    font-size: 2.2rem;
+
+.side_bar ul li a:hover::before {
+    transform: scaleX(1);
 }
-.header .fa-bars:hover{
-    transform: scale(1.1);
+
+.selected {
+    background-color: var(--secondary-color);
+    border-radius: 0.625rem;
+    width: 90%;
 }
-.header .name {
-    white-space: nowrap;
-    flex-grow: 1; /* Allow name to take remaining space */
-    text-align: left; /* Center the name text */
-    margin-left: 0%;
-    padding: 0 1rem;
+
+.side_bar ul {
+    font-weight: bold;
+    list-style: none;
+    padding: 0;
+    margin-left: 2.8125rem;
+    margin-top: 1.875rem;
+    transition: margin-left 0.5s ease-in-out;
+    margin-top: -17px;
 }
-.header .name p{
-    color: white;
+
+.selected a {
+    color: white !important;
+    padding: 0.9375rem 0.625rem;
 }
-.header h1 {
-    font-size: 1.5rem;
-    margin: 0;
-    color: white;
-}
-.header .search-bar {
-    top: 2;
-    flex-grow: 1;
-    text-align: left;
-    padding: 0 2rem;
-    margin-right: 0%;
-    margin-top: 0.5rem;
-}
-.header .search-bar input {
-    padding: 2%;
-    border: 3px solid rgba(107, 106, 106, 0.4);
-    border-radius: 1%;
-    background-color: rgba(179, 179, 179, 0.4);
-    width: 100%;
-    padding: 0.625rem 1.25rem 0.625rem 0.625rem;
-    border-radius: 1.5rem;
-    font-size: 1rem;    
-}
-.header .search-bar input::placeholder {
-    color: rgba(0, 0, 0, 0.6);
-    font-size: 1.3rem;
-}
+
+
 .bell-con {
     width: 2.5rem;
     background-color: rgba(179, 179, 179, 0.4);
@@ -221,7 +438,8 @@
     cursor: pointer;
     color: #3a8dde;
     z-index: 1000;
-    margin-left: 1.25rem; /* 20px */
+    margin-left: 2rem; /* 20px */
+    margin-right: 20px;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -346,160 +564,3 @@
 .logout-button:hover {
     background-color: red;
 }
-
-@media (max-width: 1468px) {
-    .header .fa-bars {
-        margin-left: 23%;
-    } 
-}
-
-@media (max-width: 1268px) {
-    .header .fa-bars {
-        margin-left: 25%;
-    } 
-}
-
-@media (max-width: 1120px) {
-    .header .fa-bars {
-        margin-left: 28%;
-    } 
-    .profile {
-        margin-right: 10%;
-    }
-}
-
-@media (max-width: 1020px) {
-    .header .fa-bars {
-        margin-left: 30%;
-    } 
-
-    .profile {
-        margin-right: 10%;
-    }
-}
-
-@media (max-width: 720px) {
-    .header .fa-bars {
-        margin-left: 32%;
-    } 
-}
-/*    
-
-@media (max-width: 1024px) {
-    .header {
-        width: 70%;
-        padding: 1%;
-        height: 4.5rem;
-    }
-    
-    .header h1 {
-        font-size: 1.3rem;
-    }
-    
-    .header .search-bar {
-        padding: 0 1rem;
-        max-width: 30%;
-    }
-
-    .bell-con {
-        margin-right: 3%;
-        margin-left: 3%;
-    }
-}
-
-@media (max-width: 768px) {
-    .header {
-        width: 70%;
-        padding: 0.8rem;
-        height: auto;
-        min-height: 4.5rem;
-        flex-wrap: nowrap;
-        top: 0;
-        right: 0;
-        z-index: 998;
-    }
-
-    .sidebar.visible + .header {
-        width: calc(100% - 270px);
-        right: 0;
-    }
-
-    .header .name {
-        order: 1;
-        width: auto;
-        flex-shrink: 0;
-    }
-
-    .header .fa-bars {
-        order: 2;
-        font-size: 1.6rem;
-        margin-left: auto;
-        visibility: visible !important;
-        z-index: 999;
-    }
-
-    .header .search-bar {
-        order: 3;
-        width: 100%;
-        max-width: none;
-        margin: 0.5rem 0;
-        padding: 0 0.5rem;
-    }
-
-    .header .profile {
-        order: 4;
-        flex-shrink: 0;
-    }
-
-    .bell-con {
-        order: 5;
-        margin: 0 0.5rem;
-        flex-shrink: 0;
-    }
-
-    .header {
-        flex-wrap: wrap;
-    }
-
-    .header .search-bar {
-        flex-basis: 100%;
-    }
-}
-
-@media (max-width: 1515){
-    .header{
-        width: 35%;
-    }
-}
-
-@media (max-width: 480px) {
-    .header {
-        padding: 0.6rem;
-        min-height: 4rem;
-    }
-
-    .sidebar.visible + .header {
-        width: 100%;
-        right: 0;
-    }
-
-    .header h1 {
-        font-size: 1rem;
-    }
-
-    .header .search-bar input {
-        font-size: 0.9rem;
-        padding: 0.4rem;
-    }
-
-    .bell-con {
-        width: 2rem;
-        height: 2rem;
-    }
-
-    .profilebtn {
-        width: 2.5rem;
-        height: 2.5rem;
-        margin-left: 0.5rem;
-    }
-} */
