--- a/Public/Assets/CSS/Inventory.css
+++ b/Public/Assets/CSS/Inventory.css
@@ -29,10 +29,8 @@ body {
 }
 
 /* Sidebar styles */
-.sidebar {
-    width: 250px;
-    background-color: var(--primary-color);
-    color: var(--text-light);
+.side_bar {
+    width: 270px;
     height: 100vh;
     position: fixed;
     left: 0;
@@ -93,9 +91,10 @@ body {
 /* Main content area */
 .main-content {
     flex: 1;
-    margin-left: 270px;
-    padding: 20px;
+    margin-left: 260px;
+    padding: 10px 20px;
     transition: all 0.3s;
+    width: 1000px;
 }
 
 /* Header styles */
