--- a/Public/Assets/CSS/Teacher/leaves.css
+++ b/Public/Assets/CSS/Teacher/leaves.css
@@ -18,13 +18,14 @@ body{
     padding: 25px;
     margin:20px 20px;
     overflow: hidden;
-    min-height: calc(100vh - 160px);
     flex:1;
 }
 
 .leave-table{
     padding: 0px 20px;
-    flex:1;
+    height: 470px;
+    overflow-y: auto;         /* enables vertical scrolling */
+    scrollbar-width: thin; 
 }
 .leave-page-header{
     flex: 0;
